fixed glyphicon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@
         float: left;
         font-size: 25px;
         padding: 5px 0;
+        padding-right:15px;
         margin: 0 25px 0 0px;
         color: #195C9D;
     }
